--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,10 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        redis-version: [4, 5, 6]
+        redis-version: [4]
 
     steps:
     - uses: actions/checkout@v3
+    - name: Start Redis
+      uses: supercharge/redis-github-action@1.4.0
+      with:
+        redis-version: ${{ matrix.redis-version }}
+        redis-port: 6379
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
