--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -48,9 +48,16 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        redis-version: [4]
     environment: production
 
     steps:
+    - name: Download a single artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: jar
     - name: Checkout
       uses: actions/checkout@v3
 
