--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,3 +33,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: jar
+        path: |
+          target/mutante-0.0.1-SNAPSHOT.jar
+    
+    
