--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,13 +54,27 @@ jobs:
     environment: production
 
     steps:
-    - name: Download a single artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: jar
     - name: Checkout
       uses: actions/checkout@v3
-
+    - name: Start Redis
+      uses: supercharge/redis-github-action@1.4.0
+      with:
+        redis-version: ${{ matrix.redis-version }}
+        redis-port: 6379
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: jar
+        path: |
+          target/mutante-0.0.1-SNAPSHOT.jar
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
