--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -97,8 +97,8 @@ jobs:
         # push it to ECR so that it can
         # be deployed to ECS.
         docker build -t mutante .
-        docker tag mutante:$IMAGE_TAG 553045868175.dkr.ecr.us-east-2.amazonaws.com/mutante:$IMAGE_TAG
-        docker push 553045868175.dkr.ecr.us-east-2.amazonaws.com/mutante:$IMAGE_TAG
+        docker tag mutante:latest 553045868175.dkr.ecr.us-east-2.amazonaws.com/mutante:latest
+        docker push 553045868175.dkr.ecr.us-east-2.amazonaws.com/mutante:latest
 
 
 #    - name: Fill in the new image ID in the Amazon ECS task definition
